--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-three/drei": "^10.3.0",
     "@react-three/fiber": "^9.1.4",
     "@react-three/postprocessing": "^3.0.4",
+    "@xyflow/react": "^12.8.1",
     "axios": "^1.10.0",
     "framer-motion": "^12.19.2",
     "next": "15.3.4",
