--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-three/postprocessing": "^3.0.4",
     "@xyflow/react": "^12.8.1",
     "axios": "^1.10.0",
+    "d3-force": "^3.0.0",
     "framer-motion": "^12.19.2",
     "next": "15.3.4",
     "react": "^19.0.0",
